--- a/src/app.html
+++ b/src/app.html
@@ -32,7 +32,7 @@ align-items: center;
 
 }
 
-nav-links {
+.nav-links {
 display: flex;
 justify-content: flex-end;
 align-items: center;
@@ -41,7 +41,7 @@ flex: 1 0 auto;
 
 }
 
-nav-links .link {
+.nav-links .link {
 position: relative;
 margin: 1em;
 font-size: 0.85rem;
